fix aligns

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ body {
     float: right;
     margin: 10px;
     border-radius: 5px;
+
 }
 
 #amount {
@@ -174,7 +175,10 @@ body {
     background-color: rgba(79, 157, 166, 0.1);
     width: 360px;
     height: 352PX;
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: left;
+    text-justify: auto;
     float: right;
     margin: 10px;
     border-radius: 5px;
@@ -186,7 +190,10 @@ body {
     background-color: rgba(255, 89, 89, 0.1);
     width: 360px;
     height: 352PX;
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: left;
+    text-justify: auto;
     float: right;
     margin: 10px;
     border-radius: 5px;
@@ -197,10 +204,14 @@ body {
     background-color: #FFF4D6;
     width: 360px;
     height: 352PX;
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: left;
+    text-justify: auto;
     float: right;
     margin: 10px;
     border-radius: 5px;
+
 
 }
 
@@ -313,10 +324,9 @@ button {
     color: white;
     padding: 0px 40px 10px 10 px;
     letter-spacing: 2px;
-    text-transform: uppercase;
     font-size: 14px;
     border: none;
-    cursor: pointer;
+
 }
 
 footer {
